# mcp-pdf-processor

./: .gitignore  INSTALL.md  LICENSE  README.md  pdf_processor_server.py  pyproject.toml
